correci[on el, ella act5

--- a/src/app/components/actividades/activity-1/activity-1.component.html
+++ b/src/app/components/actividades/activity-1/activity-1.component.html
@@ -30,7 +30,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-body">
-          Si cierras esta actividad perderas todo tu progreso
+          Si cierras esta actividad, perderás todo tu progreso
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
@@ -45,7 +45,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-body">
-          En esta actividad podrás entender que es {{emotion}}.
+          En esta actividad podrás entender qué es {{emotion}}.
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
