--- a/src/app/components/alta-usuario/alta-usuario.component.html
+++ b/src/app/components/alta-usuario/alta-usuario.component.html
@@ -110,7 +110,7 @@
         </div>
         <div class="modal-body">
             El responsable del tratamiento de los datos personales es TEApp; dichos datos son el nombre del usuario y su correo electrónico. La finalidad del tratamiento de los datos personales es únicamente para identificar al usuario dentro de la aplicación. 
-            Los usuarios tienen derecho a ejercer sus derechos de acceso, rectificación, cancelación y oposición respecto a sus datos personales. Para ejercer estos derechos, los usuarios pueden solicitar su baja en el sistema, al enviar un correo electrónico con el asunto "Solicitud de Baja" e incluir en el cuerpo del mensaje su nombre y correo electrónico registrados en TEApp.
+            Los usuarios pueden ejercer sus derechos de acceso, cancelación y oposición respecto a sus datos personales. Para ejercer estos derechos, los usuarios pueden solicitar su baja en el sistema, al enviar un correo electrónico con el asunto "Solicitud de Baja" e incluir en el cuerpo del mensaje su nombre y correo electrónico registrados en TEApp.
         </div>
         <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
