--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,4 @@
-<footer class="my-5 pt-5 text-body-secondary text-center text-small">
+<footer class=" text-body-secondary text-center text-small">
     <hr class="hr" />
-    <p class="mb-1">&copy; 2023–2024 TEApp</p>
-    <ul class="list-inline">
-        <li class="list-inline-item"><a href="https://www.gob.mx/indesol/documentos/ley-federal-de-transparencia-y-acceso-a-la-informacion-publica-marco-normativo">Privacidad</a></li>
-        <li class="list-inline-item"><a href="mailto:teapp.3sc0m@gmail.com">Contacto</a></li>
-    </ul>
+    <p class="">&copy; 2023–2024 TEApp</p>
 </footer>
