--- a/src/app/components/alta-usuario/alta-usuario.component.html
+++ b/src/app/components/alta-usuario/alta-usuario.component.html
@@ -57,7 +57,7 @@
                                         <input type="email" class="form-control" id="correo" [(ngModel)]="correo"
                                             placeholder="usuario@correo.com" required name="correo">
                                         <div class="invalid-feedback">
-                                            El correo electrónico es un dato obligatorio y debe ser un correo valido.
+                                            El correo electrónico es un dato obligatorio y debe ser un correo válido.
                                         </div>
                                     </div>
                                 </div>
