Creditos autor, actividad 1 y correcion orografia alegria

--- a/src/app/components/actividades/activity-1/activity-1.component.html
+++ b/src/app/components/actividades/activity-1/activity-1.component.html
@@ -16,7 +16,10 @@
           [width]="responsiveWidth"
           [height]="responsiveHeight">
         </youtube-player>
+        <br>
+        <a>{{creditos}}</a>
       </div>
+      
     </div>
       
 
