--- a/src/app/components/actividades/activity-3/activity-3.component.html
+++ b/src/app/components/actividades/activity-3/activity-3.component.html
@@ -12,7 +12,7 @@
     <mat-icon >help</mat-icon>
   </button>
 
-<h1 class = 'titulo'>¿Quién está sintiendo {{emotion}}?</h1>
+<h1 class = 'titulo'>¿Quién está sintiendo {{emocion_tit}}?</h1>
 
 <div>
   <mat-grid-list cols="2" rowHeight="600px">
