--- a/src/app/components/actividades/activity-4/activity-4.component.html
+++ b/src/app/components/actividades/activity-4/activity-4.component.html
@@ -97,7 +97,7 @@
         <h5 class="modal-title" id="resultsModalLabel">Respuestas Correctas</h5>
       </div>
       <div class="modal-body ">
-        <h3>Con {{emotion}}</h3>
+        <h3>Con {{emocion_tit}}</h3>
         <div class="result-container">
           <!-- Mostrar solo las imágenes correctas que fueron usadas en la actividad -->
           <ng-container *ngFor="let item of correctAnswers">
