--- a/src/app/components/pacientes-asignados/pacientes-asignados.component.html
+++ b/src/app/components/pacientes-asignados/pacientes-asignados.component.html
@@ -40,7 +40,7 @@
                             <td>{{ paciente.nombres }} {{paciente.paterno}} {{paciente.materno}}</td>
                             <td class="text-center ">
                                 <select id="mySelectEmocion" class="form-select form-select-sm" size="1" [(ngModel)]="emocion" name="correo">
-                                    <option value="alegria">Alegria</option>
+                                    <option value="alegria">Alegría</option>
                                     <option value="enojo">Enojo</option>
                                     <option value="tristeza">Tristeza</option>
                                     <option value="miedo">Miedo</option>
