--- a/src/app/components/actividades/activity-1/activity-1.component.css
+++ b/src/app/components/actividades/activity-1/activity-1.component.css
@@ -19,7 +19,7 @@ html, body {
   
   
   .video-container {
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
     text-align: center;
