Boton menu estadistica

--- a/src/app/components/estadistica/actividades-paciente/actividades-paciente.component.html
+++ b/src/app/components/estadistica/actividades-paciente/actividades-paciente.component.html
@@ -53,3 +53,8 @@
       </main>
   </div>
 </body>
+
+
+
+<app-menu-especialista *ngIf="tipo==='1'"></app-menu-especialista>
+<app-mnu-paciente *ngIf="tipo==='2'"></app-mnu-paciente>
