--- a/src/app/components/estadistica/estadistica-actividad/estadistica-actividad.component.html
+++ b/src/app/components/estadistica/estadistica-actividad/estadistica-actividad.component.html
@@ -77,3 +77,8 @@
     </ngx-charts-bar-vertical>
   </div>
 </div>
+
+
+
+<app-menu-especialista *ngIf="tipo==='1'"></app-menu-especialista>
+<app-mnu-paciente *ngIf="tipo==='2'"></app-mnu-paciente>
